--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -6,12 +6,12 @@
     </div>
     <nav class="nav--content">
         <ul class="list-item-header">
-            <li class="items__nav"><a href="#">Chính Trị</a></li>
-            <li class="items__nav"><a href="#">Thể Thao</a></li>
-            <li class="items__nav"><a href="#">Quân Sự</a></li>
-            <li class="items__nav"><a href="#">Giáo Dục</a></li>
-            <li class="items__nav"><a href="#">Y Tế</a></li>
-            <li class="items__nav"><a href="#">Môi trường</a></li>
+            <li class="items__nav"><a href="/politics">Chính Trị</a></li>
+            <li class="items__nav"><a href="/sports">Thể Thao</a></li>
+            <li class="items__nav"><a href="/military">Quân Sự</a></li>
+            <li class="items__nav"><a href="/education">Giáo Dục</a></li>
+            <li class="items__nav"><a href="/medical">Y Tế</a></li>
+            <li class="items__nav"><a href="/enviroment">Môi trường</a></li>
         </ul>
     </nav>
     <div class="search-header">
