--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -15,8 +15,8 @@
         </ul>
     </nav>
     <div class="search-header">
-        <form action="" method="GET" class="form-search">
-            <input type="text" name="q" class="input-search-header" placeholder="Tìm kiếm tin tức">
+        <form action="/search" method="GET" class="form-search">
+            <input type="text" name="term" class="input-search-header" placeholder="Tìm kiếm tin tức">
             <div class="icon-search-header">
                 <i class="bi bi-search"></i>
             </div>
