--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -357,6 +357,11 @@ a {
     margin-right: 12px;
 }
 
+.error-emty-info {
+    padding: 32px 20px;
+    font-size: 1.15rem;
+} 
+
     // Details Page
 .wrapper-detail {
     background-color: #ffffff;
@@ -414,6 +419,56 @@ a {
     text-align: justify;
 }
 
+// add news
+.wrapper-content.text-center {
+    text-align: center;
+    padding: 32px 20px;
+}
+
+.title {
+    font-size: 1.15rem;
+    font-family: 'Noto Serif', serif;
+}
+
+.add-news-form {
+    width: 100%;
+    font-family: 'Noto Serif', serif;
+}
+
+.add-news-form .add-news .text-title-add {
+    text-align: left;
+    font-size: 1.15rem;
+    padding: 20px 20px;
+}
+
+.add-news-form .add-news .input-add-news {
+    padding: 12px 8px;
+    font-size: 1rem;
+    background-color: transparent;
+    width: calc(100% - 200px);
+    border-radius: 10px;
+    outline: none;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    font-family: 'Noto Serif', serif;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
+}
+
+.add-news-form .submit-add-news {
+    width: fit-content;
+    background-color: #f6f8fc;
+    color: $text-color-body;
+    padding: 16px 12px;
+    margin-top: 30px;
+    font-size: 1rem;
+    border-radius: 10px;
+    transition: all 0.4s;
+}
+
+.add-news-form .submit-add-news:hover {
+    background-color: $color-hover;
+    color: $text-color;
+    cursor: pointer;
+}
 
 //Footer
 #footer-container {
