Completed Add news

--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -373,7 +373,7 @@ a {
 
 .add-news-form .submit-add-news {
   width: fit-content;
-  background-color: #f6f8fc;
+  background-color: rgba(60, 64, 67, 0.15);
   color: #000;
   padding: 16px 12px;
   margin-top: 30px;
@@ -385,6 +385,21 @@ a {
   background-color: #08a508;
   color: #fff;
   cursor: pointer; }
+
+.wrapper-content .error {
+  display: flex;
+  justify-content: center; }
+
+.error .text-error {
+  margin-top: 10px;
+  font-size: 1.15rem;
+  width: calc(100% - 700px);
+  padding: 20px 40px;
+  color: #000;
+  border: 1px solid #000; }
+
+textarea {
+  resize: vertical; }
 
 #footer-container {
   width: 100%;
