--- a/src/resources/views/partials/footer.hbs
+++ b/src/resources/views/partials/footer.hbs
@@ -18,12 +18,12 @@
     <div class="footer-item">
         <h3 class="text-head">Tin tức lĩnh vực</h3>
         <ul>
-            <li><a href="#">Chính Trị</a></li>
-            <li><a href="#">Thể Thao</a></li>
-            <li><a href="#">Quân Sự</a></li>
-            <li><a href="#">Giáo Dục</a></li>
-            <li><a href="#">Y Tế</a></li>
-            <li><a href="#">Môi trường</a></li>
+            <li><a href="/politics">Chính Trị</a></li>
+            <li><a href="/sports">Thể Thao</a></li>
+            <li><a href="/military">Quân Sự</a></li>
+            <li><a href="/education">Giáo Dục</a></li>
+            <li><a href="/medical">Y Tế</a></li>
+            <li><a href="/enviroment">Môi trường</a></li>
         </ul>
     </div>
     <div class="footer-item">
@@ -33,7 +33,6 @@
             <input type="email" name = "email-request" class = "input-footer" placeholder="Nhập email để phản hồi">
             <button type="submit"><i class="bi bi-arrow-right"></i></button>
         </form>
-        <p>Liên hệ với chúng tôi qua các trang mạng xã hội</p>
         <div class="icon-social-footer">
             <a href="https://www.facebook.com/profile.php?id=100020532521585" target="_blank"><i class="bi bi-facebook"></i></a>
             <a href="#" target="_blank"><i class="bi bi-twitter"></i></a>
