--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -100,6 +100,7 @@ a {
 
 .icon-search-header {
     position: absolute;
+    font-size: 1.15rem;
     left: 90%;
     padding: 8px;
     animation: appear 0.7s ease-in forwards;
@@ -125,7 +126,6 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-family: system-ui, sans-serif;
     background-color: transparent;
 }
 
@@ -243,6 +243,7 @@ a {
 .weather-now .adress-weather .adress {
     font-size: 0.85rem;
     opacity: 0.6;
+    text-align: center;
 }
 
 .weather-now .adress-weather .temperature {
@@ -610,7 +611,7 @@ form.request-form {
 }
 
 // Responsive
-@media (max-width: 1024px) { // Tablet
+@media (max-width: 1023px) { // Tablet
 
     // list category in header
     .nav--content .list-item-header .items__nav {
@@ -671,5 +672,57 @@ form.request-form {
     //footer text-head
     .footer-item .text-head {
         font-size: 1.1rem;
+    }
+}
+
+@media (max-width: 740px) {
+    // set Header 
+    #header-container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 16px;
+    }
+    
+    #header-container .nav--content .list-item-header {
+        display: inline-block;
+    }
+
+    .nav--content .list-item-header .items__nav a {
+        font-size: 0.875rem;
+    }
+
+    .icon-search-header {
+        position: absolute;
+        left: 93%;
+        padding: 8px;
+        font-size: 20px;
+    }
+
+    .form-search .input-search-header {
+        left: 25%;
+        font-size: 0.875rem;
+        width: 400px;
+    }
+
+    // Set Body
+    .content {
+        padding: 20px 50px;
+    }
+
+    .weather-today .today-body .text-today {
+        font-size: 1.2rem;
+    }
+
+    .weather-today .today-body .time-today {
+        font-size: 0.875rem;
+    }
+    
+    .weather-today .weather-body {
+        height: 90px;
+    }
+
+    .wrapper-content {
+        margin-top: 20px;
     }
 }
